[package]
name = "bullmq-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bon = "3.7.0"
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-redis = { version = "0.21.1", features = ["rt_tokio_1"] }
env_logger = "0.11.8"  # remove once main.rs is removed
lazy_static = "1.5.0"
log = "0.4.27"
nanoid = "0.4.0"
nutype = { version = "0.6.2", features = ["serde"] }
redis = { version = "0.31.0", features = ["aio", "json", "tokio-comp"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-redis = "0.14.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
