[package]
name = "bullrs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.98"
bon = "3.7.0"
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-redis = { version = "0.21.1", features = ["rt_tokio_1"] }
humantime = "2.2.0"
lazy_static = "1.5.0"
log = "0.4.27"
nanoid = "0.4.0"
nutype = { version = "0.6.2", features = ["serde"] }
redis = { version = "0.31.0", features = ["aio", "json", "tokio-comp"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
env_logger = "0.11.8"
test-log = "0.2.18"
