[package]
name = "bullrs"
version = "0.0.3"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A BullMQ compatible Job Queue based on Redis"
repository = "https://github.com/julianbuettner/bullrs"
authors = ["Julian Büttner <git@julianbuettner.dev>"]

[lib]
crate-type = ["lib"]

[dependencies]
bon = "3.7.0"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10"
croner = "3"
dashmap = "6.1.0"
deadpool-redis = { version = "0.21.1", features = ["rt_tokio_1"] }
error_set = "0.9.1"
humantime = "2.2.0"
lazy_static = "1.5.0"
nanoid = "0.4.0"
nutype = { version = "0.6.2", features = ["serde"] }
redis = { version = "0.31.0", features = ["aio", "json", "tokio-comp"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"

[dev-dependencies]
ntest = "0.9"
test-log = { version = "0.2.18", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
